[workspace]
resolver = "2"
default-members = ["gbe-proxy-server"]
members = ["gbe-proxy", "gbe-proxy-common", "gbe-proxy-server", "gbe-proxy-dll", "gbe-test-client"]

[workspace.dependencies]
eyre = "0.6"
thiserror = "1"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std"] }

papaya = "0.1.3"
quinn = "0.11.5"
rustls = { version = "0.23.14", features = ["ring"] }
gbe-proxy-common = {path = "gbe-proxy-common"}


# Build dependencies with full release optimizations in debug builds since they'll rarely change
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
debug = 0


