[package]
name = "gbe-proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

quinn.workspace = true
rustls.workspace = true
rcgen = "0.13"
quinn-proto = "0.11.8"
papaya.workspace = true
gbe-proxy-common.workspace = true


tokio = { version = "1", features = ["full"] }
