[package]
name = "gbe-test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

quinn.workspace = true
rustls.workspace = true
rcgen = "0.13"
quinn-proto = "0.11.8"
papaya.workspace = true
gbe-proxy-common.workspace = true
gbe-proxy = { path = "../gbe-proxy" }

windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Networking_WinSock", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemInformation", "Win32_Devices_HumanInterfaceDevice", "Win32_System_ProcessStatus"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_System_SystemInformation", "Win32_Networking_WinSock"] }